<resources>
    <string name="app_name">Pokelab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokelab">Pokelab</string>
    <string name="bulbasaur">bulbasaur image</string>
    <string name="pokemon_bulbasaur">Bulbasaur</string>
    <string name="pokeball">pokeball</string>
    <string name="dots">dots</string>
    <string name="back_arrow">back arrow</string>
    <string name="pokemon_type">Grass</string>
    <string name="pokemon_bulbasaur_id">#001</string>
    <string name="pokemon_height">0.70 cm</string>
    <string name="pokemon_weight">6.8 kg</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="tab_text_1">Stats</string>
    <string name="tab_text_2">Evolution</string>
    <string name="hp">Hp</string>
    <string name="pokemon_hp">45</string>
    <string name="attack">Attack</string>
    <string name="pokemon_attack">60</string>
    <string name="pokemon_defense">54</string>
    <string name="defense">Defense</string>
    <string name="special_attack">Special Attack</string>
    <string name="pokemon_special_attack">23</string>
    <string name="pokemon_special_defense">38</string>
    <string name="special_defense">Special Defense</string>
    <string name="speed">Speed</string>
    <string name="pokemon_speed">40</string>
    <string name="level">Lvl 16</string>
    <string name="empty_state">empty_state</string>
    <string name="empty_state_title">Oops!</string>
    <string name="empty_state_decs">Something went wrong,\n please try again</string>
</resources>