<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD"
    tools:context=".ui.detail.DetailActivity">

    <!-- Background -->
    <View
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/background"
        app:layout_constraintTop_toTopOf="@id/iv_pokemon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Icon Back Background -->
    <ImageView
        android:id="@+id/ic_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back_arrow" />

    <!-- Icon Back -->
    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back_arrow" />

    <!-- Pokemon Name -->
    <TextView
        android:id="@+id/tv_pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:textSize="26sp"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        tools:text="@string/pokemon_bulbasaur"
        app:layout_constraintTop_toBottomOf="@id/ic_back"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Pokemon Id -->
    <TextView
        android:id="@+id/tv_pokemon_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        tools:text="@string/pokemon_bulbasaur_id"
        app:layout_constraintTop_toBottomOf="@id/ic_back"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Pokemon List Type -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_type_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        tools:listitem="@layout/item_type_pokemon"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_name"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Pokemon Image -->
    <ImageView
        android:id="@+id/iv_pokemon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/bulbasaur"
        tools:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toBottomOf="@id/rv_type_pokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Pokemon Height -->
    <TextView
        android:id="@+id/tv_pokemon_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        tools:text="@string/pokemon_height"
        app:layout_constraintTop_toTopOf="@id/view_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_line"/>

    <!-- Text Height -->
    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="#9B9B9B"
        android:text="@string/height"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_line"/>

    <!-- Line -->
    <View
        android:id="@+id/view_line"
        android:layout_width="2dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/line"
        app:layout_constraintTop_toTopOf="@id/view_background"
        app:layout_constraintStart_toEndOf="@id/tv_pokemon_height"
        app:layout_constraintEnd_toStartOf="@id/tv_pokemon_weight"/>

    <!-- Pokemon Weight -->
    <TextView
        android:id="@+id/tv_pokemon_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        tools:text="@string/pokemon_weight"
        app:layout_constraintTop_toTopOf="@id/view_background"
        app:layout_constraintStart_toEndOf="@id/view_line"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Text Weight -->
    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="#9B9B9B"
        android:text="@string/weight"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_weight"
        app:layout_constraintStart_toEndOf="@id/view_line"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Empty State Image -->
    <ImageView
        android:id="@+id/iv_empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_emptystate"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/empty_state" />

    <!-- Empty State Title -->
    <TextView
        android:id="@+id/tv_empty_state_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:text="@string/empty_state_title"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/iv_empty_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Empty State Desc -->
    <TextView
        android:id="@+id/tv_empty_state_decs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/empty_state_decs"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_empty_state_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tab Layout -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:tabTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- View Pager -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
